# weather

./: .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  weather  weather.py
.github/workflows/: ci.yml
tests/: test_cli.py  test_config.py  test_env.py
weather/: AGENTS.md  __init__.py  cli.py  config.py  env.py
weather/commands/: __init__.py
weather/core/: AGENTS.md  __init__.py  location.py  update.py
